[package]
name = "golb"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast blog framework written by Rust."
authors = ["XYZscratcher <xyzscer@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
#actix-files = "0.6.2"
#actix-web = "4.3.1"
clap = { version = "4.3.3", features = ["derive", "cargo"] }
colored = "2.0.0"
dialoguer = "0.10.4"
indicatif = "0.17.5"
markdown = "0.3.0"
upon = "0.6.0"
